--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "backpack/crud": "^3.3",
         "fideloper/proxy": "~4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "santigarcor/laratrust": "5.0.*"
     },
     "require-dev": {
         "backpack/generators": "^1.1",
