--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=7.1.3",
         "backpack/base": "^0.8.9",
         "backpack/crud": "^3.3",
+        "barryvdh/laravel-dompdf": "^0.8.3",
         "fideloper/proxy": "~4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
